# municipal-agent

./: .env.example  .gitignore  CLAUDE.md  DOCKER_COMPOSE.md  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini
docs/: PLAN.md  langgraph-architecture-alignment.md  mvp_implementation_plan.md  postgresql-extensions-notes.md
docs/design/: context_service_design.md  design_template.md  discord_service_design.md  execution_service_design.md  knowledge_graph_design.md  logging_best_practices.md  orchestrator_service_design.md
docs/design/architecture/: adr-001-streaming-architecture.md  gcp_deployment.md  sidecar_deployment.md  system_architecture.md
docs/design/architecture/deprecated/: agent_registry_service_design.md  context_service_design.md  execution_service_design.md  high_level_design.md  orchestrator_service_design.md  standard_tool_library.md  system_architecture.md  unified_platform_service_design.md
docs/design/testing/: README.md  contract_testing.md  e2e_testing.md  integration_testing.md  llm_testing.md  performance_testing.md  testing_strategy.md  unit_testing.md
libs/agentic-common/: pyproject.toml
libs/agentic-common/src/agentic_common/: __init__.py  auth.py  logging.py
libs/agentic-common/tests/: test_auth.py
services/context-service/: .env.example  Dockerfile  Dockerfile.app  README.md  pyproject.toml
services/context-service/migrations/: 001_create_relational_schema.sql  002_setup_age_extension.sql  003_setup_pgvector.sql
services/context-service/src/context_service/: config.py  main.py
services/context-service/src/context_service/api/: events.py  knowledge_graph.py  query.py  state.py
services/context-service/src/context_service/core/: __init__.py  logging.py
services/context-service/src/context_service/db/: connection.py  kg_repository.py  repositories.py
services/context-service/src/context_service/models/: schemas.py
services/context-service/tests/: test_events_api.py  test_integration.py  test_state_api.py
services/context-service/tests/context_service/: test_config.py  test_main.py
services/discord-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/discord-service/src/: __init__.py  main.py
services/discord-service/src/api/: __init__.py  health.py
services/discord-service/src/core/: __init__.py  config.py  gateway_client.py  logging.py
services/discord-service/src/events/: __init__.py  internal_event.py
services/discord-service/src/handlers/: __init__.py  discord.py
services/discord-service/tests/: test_discord_handler.py  test_internal_event.py  test_orchestrator_client.py
services/execution-service/: .env.example  DOCKER.md  Dockerfile  README.md  pyproject.toml
services/execution-service/config/: mcp_servers.json
services/execution-service/mcp_servers/: discord_server.py  knowledge_graph_server.py  municode_server.py
services/execution-service/src/: __init__.py  main.py
services/execution-service/src/api/: __init__.py  models.py  routes.py
services/execution-service/src/core/: __init__.py  config.py  logging.py
services/execution-service/src/mcp/: __init__.py  client.py  connection_manager.py  runtime.py
services/execution-service/src/utils/: path_validation.py  validation.py
services/execution-service/tests/: conftest.py
services/execution-service/tests/integration/: test_mcp_protocol.py
services/execution-service/tests/unit/: test_discord_mcp.py  test_knowledge_graph_mcp.py  test_mcp_client.py  test_municode_mcp.py  test_path_validation.py  test_runtime.py  test_validation.py
services/orchestrator-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/orchestrator-service/src/orchestrator_service/: __init__.py  config.py  main.py
services/orchestrator-service/src/orchestrator_service/agent/: __init__.py  graph.py  nodes.py  state.py
services/orchestrator-service/src/orchestrator_service/core/: __init__.py  logging.py
services/orchestrator-service/src/orchestrator_service/integrations/: __init__.py  context_client.py  execution_client.py
services/orchestrator-service/src/orchestrator_service/models/: __init__.py  schemas.py
services/orchestrator-service/src/orchestrator_service/tools/: __init__.py
services/orchestrator-service/tests/: test_streaming.py
tests/e2e/: README.md  __init__.py  conftest.py  harness.py  requirements.txt  test_golden_path.py  test_smoke.py
tests/integration/: conftest.py  docker-compose.test.yml
tests/integration/context_service/: test_context_integration.py
tests/integration/discord_service/: test_discord_orchestrator_flow.py
tests/integration/execution_service/: test_execution_integration.py
tests/integration/orchestrator_service/: test_orchestrator_context_flow.py  test_orchestrator_execution_flow.py
(+7 files in other folders)
