[tool.poetry]
name = "orchestrator-service"
version = "0.1.0"
description = "LangGraph-based agent orchestration service"
authors = ["Agentic Bridge Team"]

[tool.poetry.dependencies]
python = "^3.11"
# Shared
agentic-common = {path = "../../libs/agentic-common", develop = true}
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
langgraph = "^0.2.0"
langgraph-checkpoint-postgres = "^2.0.0"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
httpx = "^0.28.0"
asyncpg = "^0.31.0"
psycopg = {extras = ["binary"], version = "^3.3.2"}
redis = "^5.0.1"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
